--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -4,9 +4,16 @@
     <item android:drawable="@android:color/white" />
 
     <!-- You can insert your own image assets here -->
-    <!-- <item>
+    <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+            android:src="@drawable/ic_launcher_round" />
+            <!-- <inset
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:gravity="center"
+            android:drawable="@drawable/ic_launcher"
+            android:layout_height="16dp"
+            android:layout_width="32dp"/> -->
+
+    </item>
 </layer-list>
